# muselmicrograd

./: README.md  pyproject.toml  requirements.txt
notebook/: micrograd-scratch.ipynb
src/muselmicrograd/: __init__.py  nn.py
test/: test_engine.py
