[project]
name = "muselmicrograd"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Musel25", email = "muselemmanuel@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
